# danmaku-renderer

./: Cargo.toml  README.md  build.rs
examples/: cairo_renderer.rs  text_layout.rs  wgpu_renderer.rs
src/: danmaku.rs  layout.rs  lib.rs  manager.rs  worker.rs
src/filter/: merge.rs  mod.rs  regex.rs  simple.rs
src/renderer/: cairo.rs  mod.rs  noop.rs
src/renderer/wgpu/: config.rs  copy.rs  copy.wgsl  fragment.wgsl  glyph_atlas.rs  glyph_manager.rs  glyph_shadow.rs  index_buffer.rs  mod.rs  render_cache.rs  renderer.rs  shadow.wgsl  timestamp.rs  vertex.wgsl  vertex_buffer.rs
src/sources/: bilibili.rs  filtered.rs  mod.rs
test/: 1176840.xml  747529524.xml  speed_test.xml
